Prevent duplicate API requests for online quotes

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,13 @@ body {
   background-color: mediumslateblue;
 }
 
+.random-quote-btn:disabled {
+  cursor: not-allowed;
+}
+.random-quote-btn:disabled:active {
+  transform: none;
+}
+
 /* .random-quote-btn.online:active {
   background-color: slateblue;
 } */
