--- a/client/styles.css
+++ b/client/styles.css
@@ -182,3 +182,32 @@ body {
 .remove-all-btn:active {
   transform: translate(4px, 4px);
 }
+
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 10px;
+}
+
+.pagination-controls button {
+  padding: 4px 10px;
+  font-size: 1rem;
+  line-height: 1rem;
+  background-color: teal;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.pagination-controls button:hover {
+  background-color: mediumseagreen;
+}
+
+.pagination-controls span {
+  font-weight: bold;
+  /* letter-spacing: 1px; */
+  text-align: center;
+}
